Fix grid overflow by setting min value

--- a/005_bento-grid/style.css
+++ b/005_bento-grid/style.css
@@ -147,8 +147,8 @@ body {
   display: grid;
   gap: 1.5vw;
   padding: 1vw;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+  grid-template-rows: repeat(6, minmax(0, 1fr));
   grid-template-areas:
     "content-7 content-1 content-1 content-4"
     "content-7 content-1 content-1 content-4"
